tests/paczka1/fuzzy1/32739610.err
Error in line 4: Ssw A790 41,1
Error in line 20: KTvNDfkO3g A223 104,62
Error in line 33: KTvNDfkO3g A223 100,3
